--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
     <section id="about">
         <div class="container">
             <div class="title">
-                <h1>Soft Skills</h1>
+                <h1>Habilidades</h1>
                 <p>Meu nome é Gabriel Pierre, sou desenvolvedor freelancer e estudante de engenharia da computação na UFPE.</p>
                 <div class="box-title">
-                    <p>88%</p>
+                    <p>74%</p>
                     <div class="b1"><div class="b2"></div></div>
-                    <span>Pensamento criativo</span>
-                    <p>76%</p>
+                    <span>HTML</span>
+                    <p>72%</p>
                     <div class="b1"><div class="b3"></div></div>
-                    <span>Relacionamento interpessoal</span>
-                    <p>84%</p>
+                    <span>CSS</span>
+                    <p>78%</p>
                     <div class="b1"><div class="b4"></div></div>
-                    <span>Capacidade de resolver problemas</span>
-                    <p>84%</p>
-                    <div class="b1"><div class="b4"></div></div>
-                    <span>Negociação</span>
+                    <span>Lógica de programação</span>
+                    <p>76%</p>
+                    <div class="b1"><div class="b5"></div></div>
+                    <span>C, C++, python, javaScript</span>
                 </div>
                 
             </div>
@@ -65,29 +65,33 @@
 
     <section id="port">
         <div class="container">
-            <input type="radio" name="slider" id="item-1" checked>
-            <input type="radio" name="slider" id="item-2">
+            <input type="radio" name="slider" id="item-1">
+            <input type="radio" name="slider" id="item-2" checked>
             <input type="radio" name="slider" id="item-3">
             <div class="cards">
                 <label class="card" for="item-1" id="song-1">
                     <img src="image/01.png" alt="">
                     <h1>Hardware</h1>
                     <p>Conhecimentos em sistemas digitais, arduino e raspberryPi</p>
-                    <button><a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/drive/folders/1ao4mQytYmAYToZTyThr7ISnOAnqoHRa8?usp=sharing">ver mais</a></button>
+                    <button title="veja os códigos"><a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/drive/folders/1ao4mQytYmAYToZTyThr7ISnOAnqoHRa8?usp=sharing">ver mais</a></button>
                 </label>
 
                 <label class="card" for="item-2" id="song-2">
                     <img src="image/02.png" alt="">
                     <h1>web</h1>
-                    <p>CSS avançado; HTML5 avançado; javaScript orientado a objetos</p>
-                    <button><a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/drive/folders/1nD09lwioUvFf-RejQgPpQOmGOGjgeZpD?usp=sharing">ver mais</a></button>
+                    <p>CSS avançado; HTML5 avançado; javaScript orientado a objetos<br><br>links para páginas dos projetos:<br>
+                        <a target="_blank" rel="noopener noreferrer" class="link" href="https://gabrielppierre.github.io/jogo-da-memoria/">jogo da memória</a><br>
+                        <a target="_blank" rel="noopener noreferrer" class="link" href="https://gabrielppierre.github.io/turismo/">Landing page para empresa de turismo</a>
+                        
+                    </p>
+                    <button title="veja os códigos"><a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/drive/folders/1nD09lwioUvFf-RejQgPpQOmGOGjgeZpD?usp=sharing">ver mais</a></button>
                 </label>
 
                 <label class="card" for="item-3" id="song-3">
                     <img src="image/03.png" alt="">
                     <h1>Algoritmos</h1>
                     <p>Conhecimentos em lógica de programação, algoritmos e estruturas de dados.</p>
-                    <button><a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/drive/folders/1DO5M7r9kWAgSqYk_Va0rCNti0LXHd9E9?usp=sharing">ver mais</a></button>
+                    <button title="veja os códigos"><a target="_blank" rel="noopener noreferrer" href="https://drive.google.com/drive/folders/1DO5M7r9kWAgSqYk_Va0rCNti0LXHd9E9?usp=sharing">ver mais</a></button>
                 </label>
             </div>
         </div>
