--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <style>
         #popup{
+            position: fixed;
+            z-index: 3;
             text-align: center;
             vertical-align: center;
             color: white;
