--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             color: white;
             margin: 0 auto;
             width: 100%;
-            height: 100vh;
+            height: 100%;
             padding: 100px;
             background-color: black;
         }
